# Raylib-GameEngine

./: .gitignore  CMakeLists.txt  README.md  app  compile_commands.json  makefile
.cache/clangd/index/: core.cpp.A5919CA68DC97F87.idx  core.h.BFE65E3FD8111E2F.idx  coreobjects.cpp.D9E10EB17E79D1B4.idx  coreobjects.h.F03FA7DE47BA618D.idx  corescene.cpp.3A487957BFB6B8DB.idx  corescene.h.4E76BE501A200A2F.idx  functions.cpp.3EE30DA744BCBC88.idx  functions.cpp.8BB817E4F23EE73C.idx  functions.cpp.E0C62A0B3BEEBAF8.idx  functions.cpp.F2DFF9F326D19501.idx  functions.h.A44B2D1FE5C394A8.idx  functions.hpp.18949334BB2B73F8.idx  functions.hpp.6FAFD6B2D7E40FBA.idx  inputs.cpp.298F96923DD4C25F.idx  main.cpp.03D7479EC3568FBB.idx  main.cpp.EFB224934663B5DE.idx  rcamera.h.E39699702B77DCBC.idx  scene.cpp.1831BA09104CEF33.idx  scene.cpp.49C7EE9347D7216F.idx  scene.cpp.52D2F99953D55B61.idx  scene.cpp.6271807E8323F962.idx  scene.h.1363D10C812A7805.idx  scene.hpp.F0AB262CE0EF222C.idx  scene.hpp.F966CC407ACCD51C.idx  test.cpp.4BA2D06A543468FF.idx  test.cpp.737D9DE935ED44A8.idx  test.cpp.AC533CF1C25C8B07.idx  ui.cpp.0C10CB31806B2910.idx  ui.cpp.BFC8FDD1F1E99072.idx
include/: core.h  coreobjects.h  corescene.h  functions.h  functions.hpp  scene.h  scene.hpp  ui.h
src/: TODO.md  functions.cpp  main.cpp  scene.cpp
src/core/: core.cpp  coreobjects.cpp  corescene.cpp  functions.cpp  inputs.cpp  scene.cpp
src/user/: test.cpp
